Fix errors involving readability.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,7 +28,3 @@ body {
   width: 20%;
   height: auto;
 }
-
-a {
-  line-height: 1px;
-}
